# okonomiyaki

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG  MANIFEST.in  README.rst  VERSION  appveyor.yml  dev_requirements.txt  dev_requirements2.txt  dev_requirements_py26.txt  doc_requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
doc/: Makefile  make.bat
doc/source/: api.rst  conf.py  contents.rst.inc  examples.rst  file_formats.rst  index.rst
doc/source/file_formats/: eggs.rst.inc  index.rst
doc/source/user/: quickstart.rst
jenkins/: branch  test
okonomiyaki/: __init__.py  __main__.py  errors.py
okonomiyaki/_cli/: __init__.py
okonomiyaki/_cli/tests/: test_cli.py
okonomiyaki/bundled/ipython_utils/: py3compat.py  traitlets.py
okonomiyaki/bundled/ipython_utils/tests/: test_traitlets.py
okonomiyaki/bundled/traitlets/: __init__.py  _implementation.py  py3compat.py
okonomiyaki/file_formats/: __init__.py  _egg_info.py  _package_info.py  _runtime_common.py  _wheel_common.py  _wheel_info.py  egg.py  egg_metadata_v2.py  egg_zip_file.py  egg_zipfile.py  eggzipfile.py  legacy.py  pep425.py  pyc_utils.py  runtime.py  runtime_info.py  runtime_metadata.py  runtime_schemas.py  setuptools_egg.py
okonomiyaki/file_formats/_blacklist/: __init__.py  pkg_info_data.py  platform_tag.py  python_tag.py
okonomiyaki/file_formats/tests/: common.py  test__egg_info.py  test__package_info.py  test__wheel_info.py  test_egg_file_format.py  test_egg_metadata_v2.py  test_egg_zip_file.py  test_eggzipfile.py  test_legacy.py  test_pep425.py  test_pyc_utils.py  test_runtime.py  test_runtime_info.py  test_runtime_metadata.py  test_setuptools_file_format.py
okonomiyaki/models/: common.py  constants.py  egg.py  enpkg.py  grits.py
okonomiyaki/models/tests/: test_common.py  test_egg_models.py  test_enpkg_models.py  test_grits.py
okonomiyaki/models/tests/data/: Cython-0.19.1-1.egg
okonomiyaki/platform/: __init__.py  epd_platform.py  legacy.py
okonomiyaki/platform/tests/: test_epd_platform.py
okonomiyaki/repositories/: __init__.py  enpkg.py  grits.py
okonomiyaki/repositories/tests/: test_enpkg.py  test_grits.py
okonomiyaki/repositories/tests/data/: Cython-0.19.1-1.egg  MKL-10.3-1.egg  PySide-1.0.3-1.egg  PySide-1.1.0-3.egg  _osx64app-1.0-1.egg  dummy_pkg_stale_pyc-0.1.0-py2.7.egg  dummy_pkg_stale_pyc-0.1.0-py3.5.egg  dummy_pkg_stale_pyc-0.1.0-py3.6.egg  dummy_pkg_stale_pyc-0.1.0-py3.8.egg  dummy_pkg_valid_pyc-0.1.0-py2.7.egg  dummy_pkg_valid_pyc-0.1.0-py3.5.egg  dummy_pkg_valid_pyc-0.1.0-py3.6.egg  dummy_pkg_valid_pyc-0.1.0-py3.8.egg  enstaller-4.5.0-1.egg  medialog.boardfile-1.6.1-1.egg  numexpr-2.2.2-3.egg  pip-6.0.8-1.egg  pip-7.0.3-py3.4.egg  pymongo-2.8-1.egg  pymultinest-0.1-1.egg  setuptools-16.0-py3.4.egg  setuptools-40.8.0-1.egg  setuptools-40.8.0-py2.7.egg  traits-6.3.0.dev1702-py3.8-win-amd64.egg  xz-5.2.0-1.egg
okonomiyaki/runtimes/: __init__.py  common.py  runtime.py  runtime_info.py  runtime_metadata.py  runtime_schemas.py
okonomiyaki/runtimes/tests/: test_runtime.py  test_runtime_info.py  test_runtime_metadata.py
okonomiyaki/tests/: test_common.py  test_egg_models.py  test_enpkg_models.py  test_grits.py
okonomiyaki/tests/data/: ets-4.3.0-3.egg
okonomiyaki/utils/: __init__.py  _compat.py  misc.py  py3compat.py  pyc_checks.py  testing.py  traitlets.py
okonomiyaki/utils/test_data/: __init__.py  cpython-2.7.10+1-osx_x86_64-darwin.runtime  cpython-2.7.10+1-rh5_x86_64-gnu.runtime  cpython-2.7.10+1-rh5_x86_64-none.runtime  cpython-2.7.10+1-rh5_x86_64-none.runtime.invalid  cpython-2.7.10+1-rh6_x86_64-gnu.runtime  cpython-2.7.10+1-rh7_x86_64-gnu.runtime  cpython-2.7.10+1-win_x86-msvc2008.runtime  cpython-2.7.10+1-win_x86_64-msvc2008.runtime  cpython-2.7.9+1-osx_x86_64-darwin.runtime  cpython-2.7.9+1-rh5_x86_64-gnu.runtime  cpython-2.7.9+1-rh5_x86_64-none.runtime  cpython-2.7.9+1-rh6_x86_64-gnu.runtime  cpython-2.7.9+1-rh7_x86_64-gnu.runtime  cpython-2.7.9+1-win_x86-msvc2008.runtime  cpython-2.7.9+1-win_x86_64-msvc2008.runtime  cpython-2.7.9+2-rh5_x86_64-gnu.runtime  cpython-2.7.9+2-rh5_x86_64-gnu.runtime.invalid  cpython-2.7.9+2-rh5_x86_64-none.runtime  cpython-3.11.2+2-osx_arm64-darwin.runtime  cpython-3.11.2+2-osx_x86_64-darwin.runtime  cpython-3.11.2+2-rh8_aarch64-gnu.runtime  cpython-3.11.2+2-rh8_arm64-gnu.runtime  cpython-3.11.2+2-rh8_x86_64-gnu.runtime  cpython-3.11.2+2-win_arm64-msvc2022.runtime  cpython-3.11.2+2-win_x86_64-msvc2022.runtime  cpython-3.4.1+1-osx_x86_64-darwin.runtime  cpython-3.4.1+1-rh5_x86_64-gnu.runtime  cpython-3.4.1+1-rh6_x86_64-gnu.runtime  cpython-3.4.1+1-rh7_x86_64-gnu.runtime  cpython-3.4.1+1-win_x86-msvc2008.runtime  cpython-3.4.1+1-win_x86_64-msvc2008.runtime  cpython-3.5.1+1-osx_x86_64-darwin.runtime  cpython-3.5.1+1-rh5_x86_64-gnu.runtime  cpython-3.5.1+1-rh6_x86_64-gnu.runtime  cpython-3.5.1+1-rh7_x86_64-gnu.runtime  cpython-3.5.1+1-win_x86-msvc2008.runtime  cpython-3.5.1+1-win_x86_64-msvc2008.runtime  cpython-3.6.5+1-osx_x86_64-darwin.runtime  cpython-3.6.5+1-rh5_x86_64-gnu.runtime  (+47 more)
okonomiyaki/utils/test_data/eggs/: MKL-10.3-1.egg  PySide-1.0.3-1.egg  ets-4.3.0-3.egg  medialog.boardfile-1.6.1-1.egg  numexpr-2.2.2-3.egg  pip-6.0.8-1.egg  supervisor-3.0-1.egg  traits-4.6.0.dev235-py2.7-macosx-10.10-intel.egg  traits-6.3.0.dev1702-py3.8-linux-x86_64.egg  xz-5.2.0-1.egg  (+1 more)
okonomiyaki/utils/tests/: test_eggs.py  test_main.py  test_misc.py  test_pyc_checks.py  test_runtimes.py  test_test_data.py
okonomiyaki/versions/: __init__.py  enpkg.py  metadata_version.py  pep386.py  pep386_workaround.py  pep440.py  runtime_version.py  semver.py
okonomiyaki/versions/tests/: test_enpkg_version.py  test_metadata_version.py  test_pep386_workaround.py  test_pep440.py  test_runtime_version.py  test_semver.py
scripts/: build_dummy_egg.py  check_okonomiyaki_spec.py  check_parse_existing_eggs.py  compute_invalid_pkg_info_encoding.py  compute_likely_invalid_python_tag.py  compute_python_tag_black_list.py  invalid_python_tag_eggs_list.txt  replace_python.py  travis_install.sh
tools/tiny_exe/: build.bat  python.c
(+53 files in other folders)
