[metadata]
name = okonomiyaki
version = attr: okonomiyaki.__version__
url = https://github.com/enthought/okonomiyaki
author = Enthought Inc.
author_email = info@enthough.com
description = Self-contained library to deal with metadata in Enthought-specific egg and runtime archives
long_description = file: README.rst, CHANGELOG
long_description_content_type = rst
license = BSD-3-Clause
license_files = file: LICENSE.txt
classifier =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.11

[bdist_wheel]
universal = 1

[options]
zip_safe = False
packages =
  okonomiyaki
  okonomiyaki._cli
  okonomiyaki._cli.tests
  okonomiyaki.file_formats
  okonomiyaki.file_formats.tests
  okonomiyaki.file_formats._blacklist
  okonomiyaki.platforms
  okonomiyaki.platforms.tests
  okonomiyaki.runtimes
  okonomiyaki.runtimes.tests
  okonomiyaki.versions
  okonomiyaki.versions.tests
  okonomiyaki.utils
  okonomiyaki.utils.test_data
  okonomiyaki.utils.tests
python_requires = >=3.6
install_requires =
  attrs >= 16.1.0
  jsonschema >= 2.5.1
  zipfile2 >= 0.0.12
  distro; sys_platform=="linux2"
  distro; sys_platform=="linux"

[options.package_data]
okonomiyaki.repositories.tests =
  data/*egg
  data/broken_legacy_eggs/*egg
  data/*.txt
okonomiyaki.utils.test_data =
  *.runtime
  *.runtime.invalid
  eggs/*.egg
  eggs/*.txt
  eggs/osx_arm64/cp311/*.egg
  eggs/osx_x86_64/cp27/*.egg
  eggs/osx_x86_64/cp38/*.egg
  eggs/osx_x86_64/cp311/*.egg
  eggs/rh5_x86_64/cp27/*.egg
  eggs/rh6_x86_64/cp27/*.egg
  eggs/rh7_x86_64/cp27/*.egg
  eggs/rh7_x86_64/cp38/*.egg
  eggs/rh8_x86_64/cp311/*.egg
  eggs/rh8_arm64/cp311/*.egg
  eggs/win_x86_64/cp27/*.egg
  eggs/win_x86_64/cp38/*.egg
  eggs/win_x86_64/cp311/*.egg
  eggs/win_arm64/cp311/*.egg
  eggs/broken_legacy_eggs/*.egg
  wheels/*.whl

[options.extras_require]
test =
   haas
   parameterized
   testfixtures
   distro
   packaging >= 20.0

[flake8]
ignore = W503
max-line-length = 120
